@@ -20,6 +20,7 @@ For a detailed view of what has changed, refer to the {uri-repo}/commits/master[
 
 === Changed
 
+* break on all terminal punctuation (period, question mark, and exclamation mark) when ventilating prose (#51)
 * consolidated logic in CLI by further delegating to API
 
 == 1.0.0.alpha.11 (2018-08-02) - @mojavelinux
